# SteelClaw

./: .gitignore  LICENSE  README.md  alembic.ini  config.example.json  install.sh  pyproject.toml
steelclaw/: __init__.py  __main__.py  app.py  dependencies.py  paths.py  pricing.py  session_heartbeat.py  settings.py
steelclaw/agents/: orchestrator.py  persona.py  persona_loader.py  router.py
steelclaw/api/: agents.py  allowlist.py  analytics.py  config.py  files.py  health.py  history.py  persona.py  scheduler.py  sessions.py  skills.py  skills_new.py  tools.py  voice.py
steelclaw/cli/: agents.py  app_cmd.py  banner.py  chat.py  config_cmd.py  connectors_cmd.py  daemon.py  gateway_cmd.py  logs.py  memory.py  persona.py  scheduler.py  security.py  sessions.py  setup.py  skills_cmd.py  skills_new_cmd.py
steelclaw/db/: engine.py  models.py
steelclaw/gateway/: attachments.py  base.py  command_handler.py  commands.py  registry.py  router.py  session_manager.py
steelclaw/llm/: context.py  provider.py
steelclaw/memory/: ingestion.py  openviking_manager.py  retrieval.py  sqlite_fts.py  vector_store.py  (+1 more)
tests/: conftest.py  test_app.py  test_attachments.py  test_banner.py  test_connectors_cmd.py  test_gateway.py  test_memory_settings.py  test_permissions_interactive.py  test_persona_loader.py  test_sandbox.py  test_scheduler.py  test_scheduler_persistence.py  test_security.py  test_session_manager.py  test_skill_parser.py  test_skill_registry.py  test_slash_commands.py  test_streaming_tool_loop.py  test_telegram_voice.py  test_viking_memory.py  test_voice_stream.py
(+169 files in other folders)
