[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steelclaw"
version = "0.3.0"
description = "Self-hosted personal AI assistant — autonomous agent for digital environments"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sqlmodel>=0.0.8",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.17",
    "alembic>=1.12",
    "pydantic-settings>=2.0",
    "httpx>=0.24",
    "websockets>=11",
    "litellm>=1.40",
    "apscheduler>=3.10,<4",
    "python-multipart>=0.0.6",
    "rich>=13.0",
    "questionary>=2.0",
    "prompt_toolkit>=3.0",
    "eval_type_backport>=0.3; python_version < '3.10'",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21"]
discord = ["discord.py>=2.4"]
slack = ["slack-bolt>=1.20"]
matrix = ["matrix-nio>=0.24"]
voice = ["openai>=1.0"]
browser = ["playwright>=1.40"]
memory = ["chromadb>=0.4"]
office = ["python-docx>=1.0", "openpyxl>=3.1", "python-pptx>=0.6", "pdfplumber>=0.11"]
all = ["steelclaw[telegram,discord,slack,matrix,voice,browser,memory,office]"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.scripts]
steelclaw = "steelclaw.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["steelclaw*"]
